--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "annamarie",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.10.2",
     "pg-promise": "^11.5.4"
