--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "joi": "^17.10.2",
-    "pg-promise": "^11.5.4"
+    "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "path": "^0.12.7",
+    "pg-promise": "^11.5.4",
+    "swagger-ui-express": "^5.0.0"
   }
 }
